cilium/gateway-dns.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: dns-gateway
    namespace: kube-system
spec:
    gatewayClassName: cilium
    #  addresses:
    #    - type: IPAddress
    #      value: 1.2.3.4 #example
    addresses:
        - type: IPAddress
          value: ${NODE0_IP}
        - type: IPAddress
          value: ${quote}${NODE0_IPV6}${quote}
    listeners:
        - allowedRoutes:
            namespaces:
                from: Selector
                selector:
                    matchLabels:
                        dns-gateway-access: "true"
          name: dns
          port: 53
          #protocol: HTTP
